Fixes a bug where the 404 text area didn't stretch properly. Cleans up the code slightly as a result.

--- a/css/sass/partials/_classes.scss
+++ b/css/sass/partials/_classes.scss
@@ -1,6 +1,5 @@
 //Container css
 .aj-main-content {
-	height: 100%;
 	@include linear-gradient(rgb(230,231,231), rgb(232,236,236));
 	md-card {
 		display: inline-block;
@@ -9,7 +8,6 @@
 
 .aj-centered-content {
 	max-width: 820px;
-	height: 100%;
 	width: 100%;
 	margin: auto;
 	background: rgb(250,250,250);
